Changing stuff to point to eriksonmurrugarra.com

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<title>Erlan | DigitalPark</title>
+		<title>Erlan | Erikson Murrrugarra</title>
 		
 		<link rel="shortcut icon" type="image/jpg" href="images/favicon.jpg" />
 		<meta charset="utf-8" />
@@ -72,7 +72,8 @@
 		text-shadow: 1px 1px 2px #000}
 		#lighto{height: 24em;}
 		.error{text-align: left; padding: .2em .5em}
-		#eriksonmurrugarra{font-family: "Segoe UI","Fuse-Segoe-UI",sans-serif;; color: #FFF; font-size: 3em;  margin: 0 auto;  padding-left: 5em}
+    #eriksonmurrugarra{font-family: "Segoe UI","Fuse-Segoe-UI",sans-serif;; color: #FFF; padding-left: 20px;  margin: 0 auto;  display: none;}
+    #eriksonmurrugarra p {font-size: 13px;}
 		#Social{margin-left: 1em;}
 		#Tutorial{width: 250px;}
 		
@@ -117,10 +118,14 @@
 
 </style>
 <div id="eriksonmurrugarra">
-				<!--<h1 style="margin-bottom: .2em;">Laboratorios Erikson</h1>-->
-				<a id="fbButton" class="btn1" onclick="login()"><b>&nbsp; Ingresa con Facebook &nbsp;</b></a>
-
-			</div>
+        <div style="display: inline-block; text-align: center;">
+        <img style="width: 80px;"src="images/erikson.jpg">
+      </div>
+      <div style="display: inline-block;">
+        <h3>Hola!</h3>
+				<p>Mi nombre es Erikson Murrugarra Sifuentes. Soy Peruano y He desarrollado este minilenguaje con el fin de que pueda ayudarte a entender los algoritmos de manera más fácil y amigable. Espero te sea de utilidad.</p  >
+      </div>
+    </div>      
 		<div id="light">
 			<div class="btn2" id="Tutorial">
 				
@@ -261,7 +266,7 @@ fin</textarea>
 			<!-- <a class="btn"  onclick="showErikson()"> SCREEN </a> -->
 			</td>
 			<td width="60%" style="text-align: right">
-			<a onclick="showErikson()">by <b><a href="https://digitalpark.io" target="_blank">DigitalPark</a></b>
+			<a onclick="showErikson()">by <b>Erikson Murrugarra (erikson.murrugarra@gmail.com) </b></a>
 			</td></tr></table>
 			</div>
 			
